eks-workshop-v2/manifests/base-application/my-own-manifests/ui/namespace.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: ui
  labels:
    app.kubernetes.io/created-by: eks-workshop
