eks-workshop-v2/manifests/base-application/my-own-manifests/ui/ui-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui 
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ui 
          volumeMounts:
            - name: efsvolume
              mountPath: /efs
      volumes:
        - name: efsvolume
          persistentVolumeClaim:
            claimName: efs-claim
