eks-workshop-v2/manifests/base-application/my-own-manifests/ui/service-nlb-patch.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ui-nlb 
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
