eks-workshop-v2/manifests/base-application/my-own-manifests/ui/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-nodeport
  labels:
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/component: service
    app.kubernetes.io/created-by: eks-workshop
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      nodePort: 30030
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/component: service
