eks-workshop-v2/manifests/base-application/my-own-manifests/ui/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui 
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/liveness
spec:
  ingressClassName: alb
  rules:
    - http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: ui 
                port:
                  number: 80
