eks-workshop-v2/manifests/base-application/my-own-manifests/ui/service-multiple-ingress-pattern.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-multi
  labels:
    app.kubernetes.io/created-by: eks-workshop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/liveness
    alb.ingress.kubernetes.io/group.name: retail-app-group
spec:
  ingressClassName: alb 
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui 
                port:
                  number: 80
